<resources>
    <string name="app_name">Shadow Browser</string>

    <string name="url_input">Page URL</string>
    <string name="no_tabs_open">No Tabs</string>
    <string name="no_tabs_open_tooltip">Press + to create a new tab</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_search_engine">Search Engine</string>
    <string name="settings_render_engine">Render Engine</string>
    <string name="settings_reset_shadow">Reset Shadow</string>

    <!-- Menu: main -->
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_reload">Reload</string>

    <!-- Content Descriptions -->
    <string name="shadow_logo_content_desc">Shadow Browser Logo</string>
    <string name="no_tabs_open_content_desc">No Tabs Open Icon</string>
    <string name="new_tab_content_desc">New Tab</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>