<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadowBlack_700"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/settings_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="581dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shadowBlack_500"
            android:fontFamily="@font/montserrat"
            android:text="@string/settings_search_engine"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5pt" />

        <Button
            android:id="@+id/render_engine_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shadowBlack_500"
            android:fontFamily="@font/montserrat"
            android:text="@string/settings_render_engine"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5pt" />

        <Button
            android:id="@+id/reset_shadow_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shadowBlack_500"
            android:fontFamily="@font/montserrat"
            android:text="@string/settings_reset_shadow"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>